pamc/src/tests/integration/should_fail/multi_file/mod.rs
use super::*;

mod bind;
mod type_check;
